--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^3.3.14",
     "aws-amplify-react": "^4.2.18",
+    "aws-appsync": "^3.0.2",
+    "graphql-tag": "^2.10.3",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
